Ensure Header collapses correctly due to intro of My-History Button.

--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -51,7 +51,7 @@
         grid-column: 3;
     }
 
-    @include mobile-down {
+    @include tablet-down {     
         & > .header-title {
             display: none;
         }
@@ -59,9 +59,7 @@
         & > .header-quick-nav {
             grid-column: 1;
         }  
-    }
 
-    @include tablet-down {        
         & > .source-code {
             display: none;
         }
